--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -246,9 +246,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Abia</td>\n",
-       "      <td>15.686275</td>\n",
-       "      <td>5.882353</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>25.490196</td>\n",
+       "      <td>13.235294</td>\n",
+       "      <td>19.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -260,16 +260,16 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Akwa-Ibom</td>\n",
-       "      <td>96.774194</td>\n",
-       "      <td>94.623656</td>\n",
-       "      <td>96.0</td>\n",
+       "      <td>101.075269</td>\n",
+       "      <td>99.462366</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Anambra</td>\n",
        "      <td>6.190476</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>17.460317</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -288,9 +288,9 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Benue</td>\n",
-       "      <td>13.043478</td>\n",
-       "      <td>17.934783</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>21.739130</td>\n",
+       "      <td>28.260870</td>\n",
+       "      <td>25.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -302,16 +302,16 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Cross River</td>\n",
-       "      <td>66.666667</td>\n",
-       "      <td>58.333333</td>\n",
-       "      <td>62.0</td>\n",
+       "      <td>83.333333</td>\n",
+       "      <td>70.138889</td>\n",
+       "      <td>77.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Delta</td>\n",
-       "      <td>74.400000</td>\n",
-       "      <td>69.600000</td>\n",
-       "      <td>72.0</td>\n",
+       "      <td>90.400000</td>\n",
+       "      <td>83.200000</td>\n",
+       "      <td>87.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -323,9 +323,9 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Edo</td>\n",
-       "      <td>94.736842</td>\n",
-       "      <td>92.105263</td>\n",
-       "      <td>93.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>97.222222</td>\n",
+       "      <td>99.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -337,16 +337,16 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Enugu</td>\n",
-       "      <td>8.088235</td>\n",
-       "      <td>11.764706</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>10.294118</td>\n",
+       "      <td>15.686275</td>\n",
+       "      <td>13.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Federal Capital Territory</td>\n",
-       "      <td>13.725490</td>\n",
-       "      <td>30.952381</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>30.392157</td>\n",
+       "      <td>69.047619</td>\n",
+       "      <td>50.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -400,42 +400,42 @@
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Kogi</td>\n",
-       "      <td>12.280702</td>\n",
-       "      <td>8.421053</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>30.526316</td>\n",
+       "      <td>32.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Kwara</td>\n",
-       "      <td>30.208333</td>\n",
+       "      <td>32.291667</td>\n",
        "      <td>29.166667</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>31.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Lagos</td>\n",
-       "      <td>96.379310</td>\n",
-       "      <td>103.333333</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>101.379310</td>\n",
+       "      <td>113.333333</td>\n",
+       "      <td>107.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>Nasarawa</td>\n",
-       "      <td>7.692308</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>30.769231</td>\n",
+       "      <td>13.846154</td>\n",
+       "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>Niger</td>\n",
        "      <td>5.333333</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>Ogun</td>\n",
-       "      <td>88.888889</td>\n",
+       "      <td>89.682540</td>\n",
        "      <td>84.126984</td>\n",
        "      <td>87.0</td>\n",
        "    </tr>\n",
@@ -449,9 +449,9 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Osun</td>\n",
-       "      <td>86.666667</td>\n",
-       "      <td>91.111111</td>\n",
-       "      <td>89.0</td>\n",
+       "      <td>88.666667</td>\n",
+       "      <td>94.444444</td>\n",
+       "      <td>92.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -508,21 +508,21 @@
       ],
       "text/plain": [
        "                        State  Urban_Completion  Rural_Completion  \\\n",
-       "0                        Abia         15.686275          5.882353   \n",
+       "0                        Abia         25.490196         13.235294   \n",
        "1                     Adamawa          0.000000          0.000000   \n",
-       "2                   Akwa-Ibom         96.774194         94.623656   \n",
-       "3                     Anambra          6.190476          0.000000   \n",
+       "2                   Akwa-Ibom        101.075269         99.462366   \n",
+       "3                     Anambra          6.190476         17.460317   \n",
        "4                      Bauchi          0.000000          0.000000   \n",
        "5                     Bayelsa        120.833333        101.785714   \n",
-       "6                       Benue         13.043478         17.934783   \n",
+       "6                       Benue         21.739130         28.260870   \n",
        "7                       Borno          0.000000          0.000000   \n",
-       "8                 Cross River         66.666667         58.333333   \n",
-       "9                       Delta         74.400000         69.600000   \n",
+       "8                 Cross River         83.333333         70.138889   \n",
+       "9                       Delta         90.400000         83.200000   \n",
        "10                     Ebonyi          0.000000          0.000000   \n",
-       "11                        Edo         94.736842         92.105263   \n",
+       "11                        Edo        100.000000         97.222222   \n",
        "12                      Ekiti         91.406250         87.500000   \n",
-       "13                      Enugu          8.088235         11.764706   \n",
-       "14  Federal Capital Territory         13.725490         30.952381   \n",
+       "13                      Enugu         10.294118         15.686275   \n",
+       "14  Federal Capital Territory         30.392157         69.047619   \n",
        "15                      Gombe          0.000000          0.000000   \n",
        "16                        Imo          8.333333          0.000000   \n",
        "17                     Jigawa          0.000000          0.000000   \n",
@@ -530,14 +530,14 @@
        "19                       Kano          0.000000          0.000000   \n",
        "20                    Kastina          0.000000          0.000000   \n",
        "21                      Kebbi          0.000000          0.000000   \n",
-       "22                       Kogi         12.280702          8.421053   \n",
-       "23                      Kwara         30.208333         29.166667   \n",
-       "24                      Lagos         96.379310        103.333333   \n",
-       "25                   Nasarawa          7.692308          0.000000   \n",
-       "26                      Niger          5.333333          2.000000   \n",
-       "27                       Ogun         88.888889         84.126984   \n",
+       "22                       Kogi         33.333333         30.526316   \n",
+       "23                      Kwara         32.291667         29.166667   \n",
+       "24                      Lagos        101.379310        113.333333   \n",
+       "25                   Nasarawa         30.769231         13.846154   \n",
+       "26                      Niger          5.333333         14.000000   \n",
+       "27                       Ogun         89.682540         84.126984   \n",
        "28                       Ondo         92.222222         83.333333   \n",
-       "29                       Osun         86.666667         91.111111   \n",
+       "29                       Osun         88.666667         94.444444   \n",
        "30                        Oyo         98.529412        109.803922   \n",
        "31                    Plateau          0.000000          0.000000   \n",
        "32                     Rivers        103.623188        105.072464   \n",
@@ -547,21 +547,21 @@
        "36                    Zamfara          0.000000          0.000000   \n",
        "\n",
        "    Overall_Completion  \n",
-       "0                 11.0  \n",
+       "0                 19.0  \n",
        "1                  0.0  \n",
-       "2                 96.0  \n",
-       "3                  3.0  \n",
+       "2                100.0  \n",
+       "3                 12.0  \n",
        "4                  0.0  \n",
        "5                111.0  \n",
-       "6                 15.0  \n",
+       "6                 25.0  \n",
        "7                  0.0  \n",
-       "8                 62.0  \n",
-       "9                 72.0  \n",
+       "8                 77.0  \n",
+       "9                 87.0  \n",
        "10                 0.0  \n",
-       "11                93.0  \n",
+       "11                99.0  \n",
        "12                89.0  \n",
-       "13                10.0  \n",
-       "14                22.0  \n",
+       "13                13.0  \n",
+       "14                50.0  \n",
        "15                 0.0  \n",
        "16                 4.0  \n",
        "17                 0.0  \n",
@@ -569,14 +569,14 @@
        "19                 0.0  \n",
        "20                 0.0  \n",
        "21                 0.0  \n",
-       "22                10.0  \n",
-       "23                30.0  \n",
-       "24               100.0  \n",
-       "25                 4.0  \n",
-       "26                 4.0  \n",
+       "22                32.0  \n",
+       "23                31.0  \n",
+       "24               107.0  \n",
+       "25                22.0  \n",
+       "26                10.0  \n",
        "27                87.0  \n",
        "28                88.0  \n",
-       "29                89.0  \n",
+       "29                92.0  \n",
        "30               104.0  \n",
        "31                 0.0  \n",
        "32               104.0  \n",
@@ -861,7 +861,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "March-13-2025\n"
+      "March-11-2025\n"
      ]
     }
    ],
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,11 +966,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. bad data count"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Convert 'Timestamp' to datetime format\n",
+    "df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
+    "\n",
+    "# Extract only the date\n",
+    "df['Date'] = df['Timestamp'].dt.date\n",
+    "\n",
+    "# Group by Date and State, then count occurrences\n",
+    "df_grouped = df.groupby(['Date', 'State']).size().reset_index(name='Count')\n",
+    "\n",
+    "# Display the grouped DataFrame\n",
+    "print(df_grouped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ea_bad['Timestamp'] = pd.to_datetime(ea_bad['Timestamp'])\n",
+    "\n",
+    "# Extract only the date\n",
+    "ea_bad['Date'] = ea_bad['Timestamp'].dt.date\n",
+    "\n",
+    "\n",
+    "bad_data_trend = ea_bad.groupby(['Date', 'State']).size().reset_index(name='Count')\n",
+    "\n",
+    "bad_data_trend.to_csv('../data/dashboard_data/bad_data_trend.csv')"
+   ]
   }
  ],
  "metadata": {
