--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "#read data \n",
     "\n",
-    "sheet_url = \"../data/data.xlsx\"\n",
+    "sheet_url = \"../../NESIP_FIELD_DATA/data.xlsx\"\n",
     "sheet_ea_day = \"0. Energy Access(LP)\"\n",
     "sheet_ea_dump = \"1. Energy Access Dump\"\n",
     "sheet_ea_passed = \"2. Energy Access(Passed)\"\n",
@@ -407,9 +407,9 @@
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Kwara</td>\n",
-       "      <td>32.291667</td>\n",
-       "      <td>29.166667</td>\n",
-       "      <td>31.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -435,9 +435,9 @@
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>Ogun</td>\n",
-       "      <td>89.682540</td>\n",
-       "      <td>84.126984</td>\n",
-       "      <td>87.0</td>\n",
+       "      <td>94.166667</td>\n",
+       "      <td>88.333333</td>\n",
+       "      <td>91.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -456,9 +456,9 @@
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>Oyo</td>\n",
-       "      <td>98.529412</td>\n",
-       "      <td>109.803922</td>\n",
-       "      <td>104.0</td>\n",
+       "      <td>101.515152</td>\n",
+       "      <td>113.131313</td>\n",
+       "      <td>107.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
@@ -531,14 +531,14 @@
        "20                    Kastina          0.000000          0.000000   \n",
        "21                      Kebbi          0.000000          0.000000   \n",
        "22                       Kogi         33.333333         30.526316   \n",
-       "23                      Kwara         32.291667         29.166667   \n",
+       "23                      Kwara               inf               inf   \n",
        "24                      Lagos        101.379310        113.333333   \n",
        "25                   Nasarawa         30.769231         13.846154   \n",
        "26                      Niger          5.333333         14.000000   \n",
-       "27                       Ogun         89.682540         84.126984   \n",
+       "27                       Ogun         94.166667         88.333333   \n",
        "28                       Ondo         92.222222         83.333333   \n",
        "29                       Osun         88.666667         94.444444   \n",
-       "30                        Oyo         98.529412        109.803922   \n",
+       "30                        Oyo        101.515152        113.131313   \n",
        "31                    Plateau          0.000000          0.000000   \n",
        "32                     Rivers        103.623188        105.072464   \n",
        "33                     Sokoto          0.000000          0.000000   \n",
@@ -570,14 +570,14 @@
        "20                 0.0  \n",
        "21                 0.0  \n",
        "22                32.0  \n",
-       "23                31.0  \n",
+       "23                 inf  \n",
        "24               107.0  \n",
        "25                22.0  \n",
        "26                10.0  \n",
-       "27                87.0  \n",
+       "27                91.0  \n",
        "28                88.0  \n",
        "29                92.0  \n",
-       "30               104.0  \n",
+       "30               107.0  \n",
        "31                 0.0  \n",
        "32               104.0  \n",
        "33                 0.0  \n",
@@ -974,21 +974,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert 'Timestamp' to datetime format\n",
-    "df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
+    "ea_bad['Timestamp'] = pd.to_datetime(ea_bad['Timestamp'])\n",
     "\n",
     "# Extract only the date\n",
-    "df['Date'] = df['Timestamp'].dt.date\n",
+    "ea_bad['Date'] = ea_bad['Timestamp'].dt.date\n",
     "\n",
-    "# Group by Date and State, then count occurrences\n",
-    "df_grouped = df.groupby(['Date', 'State']).size().reset_index(name='Count')\n",
+    "# Group by Date and count occurrences\n",
+    "bad_data_trend_pivot = ea_bad.groupby('Date').size().reset_index(name='Dropped Data')\n",
     "\n",
-    "# Display the grouped DataFrame\n",
-    "print(df_grouped)"
+    "\n",
+    "# Convert Date to string for proper visualization\n",
+    "bad_data_trend_pivot['Date'] = bad_data_trend_pivot['Date'].astype(str)\n",
+    "\n",
+    "bad_data_trend_pivot.to_csv('../data/dashboard_data/bad_data_trend_pivot.csv')"
    ]
   },
   {
@@ -996,17 +999,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ea_bad['Timestamp'] = pd.to_datetime(ea_bad['Timestamp'])\n",
-    "\n",
-    "# Extract only the date\n",
-    "ea_bad['Date'] = ea_bad['Timestamp'].dt.date\n",
-    "\n",
-    "\n",
-    "bad_data_trend = ea_bad.groupby(['Date', 'State']).size().reset_index(name='Count')\n",
-    "\n",
-    "bad_data_trend.to_csv('../data/dashboard_data/bad_data_trend.csv')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
