--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "total_target = urban_target + rural_target \n",
     "\n",
-    "current_total  = ea_passed.shape[0]"
+    "current_total  = total_target - total_deficit"
    ]
   },
   {
@@ -246,9 +246,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Abia</td>\n",
-       "      <td>25.490196</td>\n",
-       "      <td>13.235294</td>\n",
-       "      <td>19.0</td>\n",
+       "      <td>45.098039</td>\n",
+       "      <td>30.147059</td>\n",
+       "      <td>38.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -260,16 +260,16 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Akwa-Ibom</td>\n",
-       "      <td>101.075269</td>\n",
-       "      <td>99.462366</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>102.150538</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>101.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Anambra</td>\n",
-       "      <td>6.190476</td>\n",
-       "      <td>17.460317</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>17.619048</td>\n",
+       "      <td>26.984127</td>\n",
+       "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -282,15 +282,15 @@
        "      <th>5</th>\n",
        "      <td>Bayelsa</td>\n",
        "      <td>120.833333</td>\n",
-       "      <td>101.785714</td>\n",
-       "      <td>111.0</td>\n",
+       "      <td>103.571429</td>\n",
+       "      <td>112.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Benue</td>\n",
-       "      <td>21.739130</td>\n",
-       "      <td>28.260870</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>36.231884</td>\n",
+       "      <td>42.934783</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -302,23 +302,23 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Cross River</td>\n",
-       "      <td>83.333333</td>\n",
-       "      <td>70.138889</td>\n",
-       "      <td>77.0</td>\n",
+       "      <td>87.037037</td>\n",
+       "      <td>77.777778</td>\n",
+       "      <td>82.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Delta</td>\n",
        "      <td>90.400000</td>\n",
-       "      <td>83.200000</td>\n",
-       "      <td>87.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>95.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Ebonyi</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>9.890110</td>\n",
+       "      <td>10.256410</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -330,23 +330,23 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Ekiti</td>\n",
-       "      <td>91.406250</td>\n",
-       "      <td>87.500000</td>\n",
-       "      <td>89.0</td>\n",
+       "      <td>100.781250</td>\n",
+       "      <td>91.666667</td>\n",
+       "      <td>96.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Enugu</td>\n",
-       "      <td>10.294118</td>\n",
-       "      <td>15.686275</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>26.470588</td>\n",
+       "      <td>29.411765</td>\n",
+       "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Federal Capital Territory</td>\n",
-       "      <td>30.392157</td>\n",
-       "      <td>69.047619</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>47.058824</td>\n",
+       "      <td>109.523810</td>\n",
+       "      <td>78.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -358,9 +358,9 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Imo</td>\n",
-       "      <td>8.333333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>11.111111</td>\n",
+       "      <td>4.629630</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -400,9 +400,9 @@
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Kogi</td>\n",
-       "      <td>33.333333</td>\n",
-       "      <td>30.526316</td>\n",
-       "      <td>32.0</td>\n",
+       "      <td>56.140351</td>\n",
+       "      <td>55.789474</td>\n",
+       "      <td>56.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -414,30 +414,30 @@
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Lagos</td>\n",
-       "      <td>101.379310</td>\n",
+       "      <td>103.448276</td>\n",
        "      <td>113.333333</td>\n",
-       "      <td>107.0</td>\n",
+       "      <td>108.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>Nasarawa</td>\n",
-       "      <td>30.769231</td>\n",
-       "      <td>13.846154</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>51.282051</td>\n",
+       "      <td>38.461538</td>\n",
+       "      <td>45.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>Niger</td>\n",
-       "      <td>5.333333</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>19.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>Ogun</td>\n",
-       "      <td>94.166667</td>\n",
-       "      <td>88.333333</td>\n",
-       "      <td>91.0</td>\n",
+       "      <td>103.333333</td>\n",
+       "      <td>99.166667</td>\n",
+       "      <td>101.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -449,9 +449,9 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Osun</td>\n",
-       "      <td>88.666667</td>\n",
-       "      <td>94.444444</td>\n",
-       "      <td>92.0</td>\n",
+       "      <td>102.000000</td>\n",
+       "      <td>107.777778</td>\n",
+       "      <td>105.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -463,9 +463,9 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>Plateau</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>15.686275</td>\n",
+       "      <td>14.705882</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -508,38 +508,38 @@
       ],
       "text/plain": [
        "                        State  Urban_Completion  Rural_Completion  \\\n",
-       "0                        Abia         25.490196         13.235294   \n",
+       "0                        Abia         45.098039         30.147059   \n",
        "1                     Adamawa          0.000000          0.000000   \n",
-       "2                   Akwa-Ibom        101.075269         99.462366   \n",
-       "3                     Anambra          6.190476         17.460317   \n",
+       "2                   Akwa-Ibom        102.150538        100.000000   \n",
+       "3                     Anambra         17.619048         26.984127   \n",
        "4                      Bauchi          0.000000          0.000000   \n",
-       "5                     Bayelsa        120.833333        101.785714   \n",
-       "6                       Benue         21.739130         28.260870   \n",
+       "5                     Bayelsa        120.833333        103.571429   \n",
+       "6                       Benue         36.231884         42.934783   \n",
        "7                       Borno          0.000000          0.000000   \n",
-       "8                 Cross River         83.333333         70.138889   \n",
-       "9                       Delta         90.400000         83.200000   \n",
-       "10                     Ebonyi          0.000000          0.000000   \n",
+       "8                 Cross River         87.037037         77.777778   \n",
+       "9                       Delta         90.400000        100.000000   \n",
+       "10                     Ebonyi          9.890110         10.256410   \n",
        "11                        Edo        100.000000         97.222222   \n",
-       "12                      Ekiti         91.406250         87.500000   \n",
-       "13                      Enugu         10.294118         15.686275   \n",
-       "14  Federal Capital Territory         30.392157         69.047619   \n",
+       "12                      Ekiti        100.781250         91.666667   \n",
+       "13                      Enugu         26.470588         29.411765   \n",
+       "14  Federal Capital Territory         47.058824        109.523810   \n",
        "15                      Gombe          0.000000          0.000000   \n",
-       "16                        Imo          8.333333          0.000000   \n",
+       "16                        Imo         11.111111          4.629630   \n",
        "17                     Jigawa          0.000000          0.000000   \n",
        "18                     Kaduna          0.000000          0.000000   \n",
        "19                       Kano          0.000000          0.000000   \n",
        "20                    Kastina          0.000000          0.000000   \n",
        "21                      Kebbi          0.000000          0.000000   \n",
-       "22                       Kogi         33.333333         30.526316   \n",
+       "22                       Kogi         56.140351         55.789474   \n",
        "23                      Kwara               inf               inf   \n",
-       "24                      Lagos        101.379310        113.333333   \n",
-       "25                   Nasarawa         30.769231         13.846154   \n",
-       "26                      Niger          5.333333         14.000000   \n",
-       "27                       Ogun         94.166667         88.333333   \n",
+       "24                      Lagos        103.448276        113.333333   \n",
+       "25                   Nasarawa         51.282051         38.461538   \n",
+       "26                      Niger          6.666667         31.000000   \n",
+       "27                       Ogun        103.333333         99.166667   \n",
        "28                       Ondo         92.222222         83.333333   \n",
-       "29                       Osun         88.666667         94.444444   \n",
+       "29                       Osun        102.000000        107.777778   \n",
        "30                        Oyo        101.515152        113.131313   \n",
-       "31                    Plateau          0.000000          0.000000   \n",
+       "31                    Plateau         15.686275         14.705882   \n",
        "32                     Rivers        103.623188        105.072464   \n",
        "33                     Sokoto          0.000000          0.000000   \n",
        "34                     Taraba          0.000000          0.000000   \n",
@@ -547,38 +547,38 @@
        "36                    Zamfara          0.000000          0.000000   \n",
        "\n",
        "    Overall_Completion  \n",
-       "0                 19.0  \n",
+       "0                 38.0  \n",
        "1                  0.0  \n",
-       "2                100.0  \n",
-       "3                 12.0  \n",
+       "2                101.0  \n",
+       "3                 22.0  \n",
        "4                  0.0  \n",
-       "5                111.0  \n",
-       "6                 25.0  \n",
+       "5                112.0  \n",
+       "6                 40.0  \n",
        "7                  0.0  \n",
-       "8                 77.0  \n",
-       "9                 87.0  \n",
-       "10                 0.0  \n",
+       "8                 82.0  \n",
+       "9                 95.0  \n",
+       "10                10.0  \n",
        "11                99.0  \n",
-       "12                89.0  \n",
-       "13                13.0  \n",
-       "14                50.0  \n",
+       "12                96.0  \n",
+       "13                28.0  \n",
+       "14                78.0  \n",
        "15                 0.0  \n",
-       "16                 4.0  \n",
+       "16                 8.0  \n",
        "17                 0.0  \n",
        "18                 0.0  \n",
        "19                 0.0  \n",
        "20                 0.0  \n",
        "21                 0.0  \n",
-       "22                32.0  \n",
+       "22                56.0  \n",
        "23                 inf  \n",
-       "24               107.0  \n",
-       "25                22.0  \n",
-       "26                10.0  \n",
-       "27                91.0  \n",
+       "24               108.0  \n",
+       "25                45.0  \n",
+       "26                19.0  \n",
+       "27               101.0  \n",
        "28                88.0  \n",
-       "29                92.0  \n",
+       "29               105.0  \n",
        "30               107.0  \n",
-       "31                 0.0  \n",
+       "31                15.0  \n",
        "32               104.0  \n",
        "33                 0.0  \n",
        "34                 0.0  \n",
@@ -861,7 +861,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "March-11-2025\n"
+      "March-10-2025\n"
      ]
     }
    ],
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
